--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "private": true,
   "proxy": "http://localhost:3000",
   "dependencies": {
+    "@nivo/bar": "^0.88.0",
+    "@nivo/core": "^0.88.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "chart.js": "^4.4.8",
+    "chart.js": "^4.4.9",
     "chartjs-plugin-datalabels": "^2.2.0",
     "emoji-picker-react": "^4.12.0",
-    "firebase": "^11.3.1",
+    "firebase": "^11.6.0",
     "firebase-admin": "^13.2.0",
+    "highcharts": "^11.4.0",
+    "highcharts-react-official": "^3.2.1",
     "howler": "^2.2.4",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
@@ -23,10 +27,10 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
     "react-gauge-chart": "^0.5.1",
-    "react-router-dom": "^7.2.0",
+    "react-router-dom": "^7.5.1",
     "react-scripts": "^5.0.1",
     "react-sonner": "^0.0.1",
-    "sweetalert2": "^11.17.2",
+    "sweetalert2": "^11.19.1",
     "use-debounce": "^10.0.4",
     "web-vitals": "^4.2.4"
   },
